# Grok-Project

slynqix/: Cargo.toml  README.md  index.html  package.json  style.css  tailwind.config.js
slynqix/src/: app.rs  components.rs  lib.rs  main.rs
slynqix/src/components/: analysis_table.rs  coming_soon.rs  header.rs  journal_form.rs  market_card.rs  notification_dropdown.rs  picture_in_picture.rs  sidebar.rs  stat_card.rs
slynqix/src/components/ui/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  calendar.rs  card.rs  carousel.rs  chart.rs  checkbox.rs  collapsible.rs  command.rs  context_menu.rs  dialog.rs  drawer.rs  dropdown_menu.rs  form.rs  hover_card.rs  input.rs  input_otp.rs  label.rs  menubar.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  separator.rs  sheet.rs  sidebar.rs  skeleton.rs  slider.rs  switch.rs  tabs.rs  textarea.rs  theme_toggle.rs  (+5 more)
slynqix/src/hooks/: use_mobile.rs  use_toast.rs
slynqix/src/lib/: utils.rs
slynqix/src/pages/: admin_dashboard.rs  aftermarket_analyzer.rs  algo_trading.rs  console.rs  dashboard.rs  global_sentiment.rs  history.rs  index.rs  journal.rs  mindsage.rs  model_trainer.rs  not_found.rs  profile.rs
