[package]
name = "slynqix"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }  # Client-side rendering
leptos_router = "0.6"                            # Routing
leptos_icons = "0.6"                             # Lucide icons
chrono = "0.4"                                   # Date and time
serde = { version = "1.0", features = ["derive"] } # Serialization
uuid = { version = "1.10", features = ["v4"] }    # UUID generation
wasm-bindgen = "0.2"                             # WebAssembly bindings
web-sys = { version = "0.3", features = ["Window", "Storage"] } # Local storage access
log = "0.4"                                      # Logging
console_log = "1.0"                              # Console logging
console_error_panic_hook = "0.1"                 # Panic handling

[dev-dependencies]
wasm-bindgen-test = "0.3"                        # Testing

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "slynqix"
path = "src/main.rs"

[lints.clippy]
all = "warn"
pedantic = "warn"
unused_variables = "off"